# librf

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  Doxyfile  LICENSE  README.md  build_vs2019.bat  config.h.in  gcc_bugs.cpp  test_librf.cpp
.github/workflows/: cmake.yml
asio/: asio_task.h  asio_task_1.10.0.inl  asio_task_1.12.0.inl  asio_task_1.12.2.inl
benchmark/: CMakeLists.txt  benchmark_asio_echo.cpp  benchmark_async_mem.cpp  benchmark_channel_passing_next.cpp  test_async_cinatra_client.cpp
cmake/: SelectDynamicLibrary.cmake  install.cmake
doxygen/html/: __awaker_8h_source.html  annotated.html  asio__task_8h_source.html  awaitable_8h_source.html  channel_8h_source.html  channel__v1_8h_source.html  channel__v2_8h_source.html  classasio_1_1rf__task__t-members.html  classasio_1_1rf__task__t.html  classes.html  classresumef_1_1batch__lock__t-members.html  classresumef_1_1batch__lock__t.html  config_8h_source.html  counted__ptr_8h_source.html  current__scheduler_8h_source.html  def_8h_source.html  dir_3c80010775d22af2067790ecc9cdcf9d.html  dir_54ae0e78d997f6903cdf0996223d047f.html  event_8h_source.html  event__v1_8h_source.html  event__v2_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  future_8h_source.html  generator_8h_source.html  hierarchy.html  index.html  intrusive__link__queue_8h_source.html  menudata.js  mutex_8h_source.html  mutex__v1_8h_source.html  mutex__v2_8h_source.html  promise_8h_source.html  rf__task_8h_source.html  ring__queue_8h_source.html  ring__queue__lockfree_8h_source.html  ring__queue__spinlock_8h_source.html  scheduler_8h_source.html  (+63 more)
doxygen/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  all_e.js  all_f.html  all_f.js  classes_0.html  classes_0.js  classes_1.html  classes_1.js  (+55 more)
include/librf/: librf.h  librf_macro.h
include/librf/src/: _awaker.h  awaitable.h  channel.h  channel_v2.h  channel_v2.inl  config.h  counted_ptr.h  current_scheduler.h  def.h  event.h  event_v2.h  event_v2.inl  exception.inl  future.h  generator.h  intrusive_link_queue.h  macro_def.inl  mutex.h  mutex_v2.h  mutex_v2.inl  promise.h  promise.inl  rf_task.h  ring_queue.h  scheduler.h  sleep.h  spinlock.h  state.h  state.inl  switch_scheduler.h  timer.h  type_concept.inl  type_traits.inl  when.h  when_v2.h  without_deadlock_assemble.inl  yield.h
include/librf/src/unix/: clang_builtin.h
librf/: librf.h
librf/src/: _awaker.h  asio_task.h  asio_task_1.10.0.inl  asio_task_1.12.0.inl  awaitable.h  channel.h  channel_v1.h  channel_v2.h  channel_v2.inl  config.h  counted_ptr.h  current_scheduler.h  def.h  event.cpp  event.h  event_v1.cpp  event_v1.h  event_v2.cpp  event_v2.h  event_v2.inl  exception.inl  future.h  generator.h  intrusive_link_queue.h  macro_def.inl  mutex.cpp  mutex.h  mutex_v1.cpp  mutex_v1.h  mutex_v2.cpp  mutex_v2.h  mutex_v2.inl  promise.h  promise.inl  rf_task.cpp  rf_task.h  ring_queue.h  ring_queue_lockfree.h  ring_queue_spinlock.h  scheduler.cpp  (+23 more)
librf/src/unix/: clang_builtin.h  coroutine.h  gcc_builtin.h
source/: event_v2.cpp  mutex_v2.cpp  rf_task.cpp  scheduler.cpp  sleep.cpp  state.cpp  timer.cpp  when_v2.cpp
tutorial/: CMakeLists.txt  gcc_bugs.cpp  test_async_cb.cpp  test_async_channel.cpp  test_async_channel_mult_thread.cpp  test_async_dynamic_go.cpp  test_async_event.cpp  test_async_event_timeout.cpp  test_async_event_v2.cpp  test_async_exception.cpp  test_async_memory_layout.cpp  test_async_modern_cb.cpp  test_async_multi_thread.cpp  test_async_mutex.cpp  test_async_resumable.cpp  test_async_routine.cpp  test_async_sleep.cpp  test_async_stop_token.cpp  test_async_suspend_always.cpp  test_async_switch_scheduler.cpp  test_async_timer.cpp  test_async_when_all.cpp  test_async_yield_return.cpp  test_memory_leak.cpp  test_ring_queue.h
vs_proj/: librf.cpp  librf.sln  librf.vcxproj  librf.vcxproj.filters
xcode_proj/librf.xcodeproj/: project.pbxproj
xcode_proj/librf.xcodeproj/project.xcworkspace/xcuserdata/tearshark.xcuserdatad/: UserInterfaceState.xcuserstate
xcode_proj/librf.xcodeproj/xcshareddata/xcschemes/: librf.xcscheme
xcode_proj/librf.xcodeproj/xcuserdata/tearshark.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode_proj/librf.xcodeproj/xcuserdata/tearshark.xcuserdatad/xcschemes/: xcschememanagement.plist
